--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongoose": "^7.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
