--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.3.0",
     "sweetalert2": "^11.10.0"
   }
 }
