--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.3.0",
+    "razorpay": "^2.9.2",
     "sweetalert2": "^11.10.0"
   }
 }
