--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pdfkit": "^0.14.0",
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.2",
+    "sharp": "^0.33.0",
     "sweetalert2": "^11.10.0"
   }
 }
