--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.2",
     "sharp": "^0.33.0",
-    "sweetalert2": "^11.10.0"
+    "sweetalert2": "^11.10.0",
+    "voucher-code-generator": "^1.3.0"
   }
 }
